# aius

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
beings/assistant_aize/: index.html
beings/beings/: index.html
docs/: CNAME  mkdocs.yml
docs/content/: index.md  release-notes.md
docs/content/beings/: assistant_aize.md  beings.md
docs/content/input_sensors/: cli.md  web_server.md
docs/content/input_sensors/cli/: cli.md
docs/content/log_memory/: memory_storage.md
docs/content/log_processing/: embeddings.md  language_models.md
docs/content/output_tools/: output_tools.md
input_sensors/cli/: index.html
input_sensors/cli/cli/: index.html
input_sensors/web_server/: index.html
log_memory/memory_storage/: index.html
log_processing/embeddings/: index.html
log_processing/language_models/: index.html
output_tools/output_tools/: index.html
release-notes/: index.html
search/: search_index.json
src/aius/input_sensors/cli/: console.py
