[tool.poetry]
name = "aius"
version = "0.0.0"
description = "AI for us: The memory system for your AI agents"
authors = ["Mark Bain <markmbain1@gmail.com>"]
license = "MIT"
packages = [{include = "aius", from = "src"}]
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://aius.co"
Repository = "https://github.com/markmbain/aius"
# Documentation = "https://github.com/markmbain/aius/docs"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = "^2.8.2"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.34"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.scripts]
aius = "aius.input_sensors.cli.console:AIUS"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"